home and Landing page AlignMent corrected

--- a/src/Components/Land.css
+++ b/src/Components/Land.css
@@ -1,8 +1,9 @@
 .container {
   text-align: center;
-  margin: auto;
+ 
   max-width: 1200px;
   padding: 20px;
+
 }
 
 body {
